corrigindo o bug de listar varios serviços

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
     </head>
     <body id="page-top">
-        <div id="config">http://localhost:3000</div>
+        <div id="config">http://100.25.138.22:3000</div>
 
         <!-- Menu de navegação-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -160,7 +160,7 @@
         <footer class="footer bg-dark py-4">
             <div class="container">
                 <div class="row align-items-center text-light">
-                    <div class="col-lg-4 text-lg-left"><a href="https://www.linkedin.com/in/wesleymeneghini/">Wesley Meneghini © 2020</a></div>
+                    <div class="col-lg-4 text-lg-left"><a href="https://www.linkedin.com/in/wesleymeneghini/">Desenvolvido por Wesley Meneghini © 2020</a></div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                     </div>
@@ -332,6 +332,5 @@
         <script src="js/scripts.js"></script>
         <script src="./js/carregar-serviços.js"></script>
         <script src="./js/agendamento-servico.js"></script>
-        <script src="./config.js"></script>
     </body>
 </html>
